<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDF6F2">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
      >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewNumber2"
        app:cardCornerRadius="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="30dp"
            >

            <TextView
                android:id="@+id/lbl_number"
                android:layout_width="69dp"
                android:layout_height="22dp"


                android:text="@string/number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/lbl_number_len"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/len"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_number" />

            <TextView
                android:id="@+id/tv_number_len2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lbl_number_len" />


            <TextView
                android:id="@+id/lbl_number_luhn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alg_luhn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_number_len" />

            <TextView
                android:id="@+id/tv_number_luhn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lbl_number_luhn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>




    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_2"
        app:cardCornerRadius="15dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="30dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_scheme2"
            app:layout_constraintStart_toStartOf="@+id/tv_scheme2">

            <TextView
                android:id="@+id/lbl_scheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_scheme2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lbl_scheme" />


            <TextView
                android:id="@+id/lbl_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_scheme2"

                />

            <TextView
                android:id="@+id/tv_type2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="@id/lbl_type" />


            <TextView
                android:id="@+id/lbl_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_type2" />

            <TextView
                android:id="@+id/tv_brand2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="@id/lbl_brand" />


            <TextView
                android:id="@+id/lbl_prepaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prepaid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_brand2" />

            <TextView
                android:id="@+id/tv_prepaid2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="@id/lbl_prepaid" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCountry_2"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        app:cardCornerRadius="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="30dp"
            >

            <TextView
                android:id="@+id/lbl_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/lbl_country_numeric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_number"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_country" />

            <TextView
                android:id="@+id/tv_country_numeric2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="@id/lbl_country_numeric" />


            <TextView
                android:id="@+id/lbl_country_alpha2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alpha2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_country_numeric2" />

            <TextView
                android:id="@+id/tv_country_alpha2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="@id/lbl_country_alpha2" />


            <TextView
                android:id="@+id/lbl_country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_country_alpha2" />

            <TextView
                android:id="@+id/tv_country_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="@id/lbl_country_name" />


            <TextView
                android:id="@+id/lbl_country_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emoji"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_country_name2" />

            <TextView
                android:id="@+id/tv_country_emoji2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="@id/lbl_country_emoji" />


            <TextView
                android:id="@+id/lbl_country_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_country_emoji2" />

            <TextView
                android:id="@+id/tv_country_currency2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="@id/lbl_country_currency" />


            <TextView
                android:id="@+id/lbl_country_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_country_currency2" />

            <TextView
                android:id="@+id/tv_country_latitude2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="@id/lbl_country_latitude" />


            <TextView
                android:id="@+id/lbl_country_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_country_latitude2" />

            <TextView
                android:id="@+id/tv_country_longitude2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="@id/lbl_country_longitude" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBank2"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="15dp"
        android:layout_marginVertical="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="30dp">

            <TextView
                android:id="@+id/lbl_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_bank_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"


                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_bank" />


            <TextView
                android:id="@+id/lbl_bank_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/url"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bank_name2" />

            <TextView
                android:id="@+id/tv_bank_url2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                android:linksClickable="true"
                android:autoLink="web"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/lbl_bank_url" />


            <TextView
                android:id="@+id/lbl_bank_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bank_url2" />

            <TextView
                android:id="@+id/tv_bank_phone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                android:linksClickable="true"
                android:autoLink="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/lbl_bank_phone" />


            <TextView
                android:id="@+id/lbl_bank_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bank_phone2" />

            <TextView
                android:id="@+id/tv_bank_city2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_string"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="@id/lbl_bank_city" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>


























</LinearLayout>